# shmipc-cpp

./: CMakeLists.txt  README.md  README_zh-CN.md  install.sh
examples/: client_main.c  server_main.c
include/shmipc/: ShareMemoryManager.h  ShmBenchTester.h  ShmBufferManager.h  ShmClient.h  ShmClientSession.h  ShmConfig.h  ShmDispatchQueue.h  ShmIpcMessage.h  ShmIpcMessageHeader.h  ShmLatency.h  ShmLogger.h  ShmMessageQueue.h  ShmMetadata.h  ShmProtocolHandler.h  ShmProtocolType.h  ShmServer.h  ShmServerSession.h  ShmServerSessionManager.h  ShmTestPacket.h  shmipc.h
src/: ShareMemoryManager.cpp  ShmBenchTester.cpp  ShmBufferManager.cpp  ShmClient.cpp  ShmClientSession.cpp  ShmProtocolHandler.cpp  ShmServer.cpp  ShmServerSession.cpp  ShmServerSessionManager.cpp  shmipc_api.cpp
tests/: README.md  bench_test.c  test1_s2c.c  test2_c2s.c  test3_duplex.c  test4_zc.c  test5_latency.c  test7_dispatch.c  test_common.h
